Added new endpoint listStudentByName
